feat(dashboard) integrate dashboard component into backend

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
                             </div>
                         </td>
                         <td>{{rowData.level}}</td>
-                        <td>{{rowData.isActive == true ? 'Active': 'InActive'}}</td>
+                        <td>{{rowData.isActive}}</td>
                         <td>{{rowData.cycle}}</td>
                     </tr>
                 </ng-template>
