--- a/src/app/views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard.component.html
@@ -180,4 +180,33 @@
       </div>
     </div><!--/.col-->
   </div><!--/.row-->
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+          <div class="card-header">
+              <button type="button" class="btn btn-primary float-right"><i class="icon-plus"></i>&nbsp;Generate Member Code</button>
+              Member's Code
+          </div>
+          <div class="card-body">
+              <!-- p-table -->   
+              <p-table [value]="memberCode" [paginator]="true" [rows]="25" [scrollable]="true">
+                  <ng-template pTemplate="header">
+                      <tr class="dash-header">
+                          <th>Code</th>
+                          <th>Status</th>
+                      </tr>
+                  </ng-template>
+                  <ng-template pTemplate="body" let-rowData>
+                    <tr>
+                      <td>{{rowData.code}}</td>
+                      <td><span [ngClass]="(rowData.isUsed) ? 'badge badge-danger':'badge badge-success'">{{rowData.isUsed ? 'USED' : 'AVAILABLE'}}</span></td>
+                    </tr>
+                  </ng-template>
+              </p-table>
+            
+          </div>
+      </div>
+    </div>
+  </div>
 </div>
