--- a/src/app/views/request-voucher/request-voucher.component.html
+++ b/src/app/views/request-voucher/request-voucher.component.html
@@ -18,7 +18,7 @@
                         *ngIf="(voucherForm.get('storeCode').invalid && voucherForm.get('storeCode').dirty)">
                         Select store code
                     </small>
-                    <button class="btn-sm btn-primary pull-right mt-1" (click)="createNewStore()">Create new
+                    <button *ngIf="currentUser?.role == 'admin'" class="btn-sm btn-primary pull-right mt-1" (click)="createNewStore()">Create new
                         store</button>
                 </div>
                 <div class="form-group">
