--- a/src/app/views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard.component.html
@@ -209,4 +209,33 @@
       </div>
     </div>
   </div>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="card">
+          <div class="card-header">
+              <button type="button" (click)="createUser()" class="btn btn-primary float-right">Action</button>
+            Admin Users
+            </div>
+          <div class="card-body">
+              <p-table [value]="users" [paginator]="true" [rows]="25" [scrollable]="true">
+                  <ng-template pTemplate="header">
+                      <tr class="dash-header">
+                          <th>Username</th>
+                          <th>Password</th>
+                          <th>Role</th>
+                      </tr>
+                  </ng-template>
+                  <ng-template pTemplate="body" let-rowData>
+                    <tr>
+                      <td>{{rowData.username}}</td>
+                      <td>{{rowData.password}}</td>
+                      <td>{{rowData.role | uppercase}}</td>
+                    </tr>
+                  </ng-template>
+              </p-table>
+          </div>
+      </div>
+    </div>
+  </div>
 </div>
