--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -3,82 +3,135 @@
     <div class="col-sm-5">
       <div class="card card-signin mt-4 mb-3">
         <div class="card-body">
-          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)"
-            novalidate>
-            <div class="p-15 text-center mb-4">
-              <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
-            </div>
-            <h5 class="card-title text-center mt-4 mb-3 text-success lead font-weight-bold">REGISTER</h5>
-            <div *ngIf="!isSeller" class="animated fadeIn fadeOut">
-              <div class="form-group">
-                <label>Seller Name</label>
-                <input class="form-control" formControlName="sellerName">
-              </div>
-              <div class="form-group">
-                <label>Contact Number</label>
-                <input class="form-control" type="number" min="0" formControlName="contactNumber"  oninput="validity.valid||(value='');">
-              </div>
-              <div class="form-group">
-                <label>Facebook/Website URL</label>
-                <input class="form-control" type="text" formControlName="sellerUrl">
-              </div>
-            </div>
-            <div class="form-group">
-              <label>Email address</label>
-              <input type="email" class="form-control" placeholder="" formControlName="email">
-              <small class="text-danger" *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.required">Enter email address</small>
-              <small class="text-danger" *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.email">Enter a valid email address</small>
-            </div>
-            <div *ngIf="isSeller" class="form-group">
-              <label>Code</label>
-              <input class="form-control" type="text" formControlName="code">
-              <small class="text-danger" *ngIf="registerFormGroup.controls['code'].errors?.isUsed">Enter a valid code</small>
-            </div>
-            <div class="form-group" formGroupName="passwords">
-              <div>
-                  <label>Create password</label>
-                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
-                  <small class="text-danger" *ngIf="registerFormGroup.controls['passwords'].controls.password.dirty && registerFormGroup.controls['passwords'].controls.password.errors?.required">Enter a password</small>
-              </div>
-              <div class="pt-3">
-                  <label>Re-enter password</label>
-                  <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
-                  <small class="text-danger" *ngIf="registerFormGroup.controls['passwords'].controls.confirm_password.dirty && registerFormGroup.controls['passwords'].errors?.invalid">Password does not match</small>
-              </div>
-            </div>
-            <div *ngIf="isSeller" class="form-group">
-              <label>Upline/Referrer Code</label>
-              <input class="form-control" formControlName="referrerCode">
-              <small class="text-danger" *ngIf="registerFormGroup.controls['referrerCode'].errors?.referrerCodeLimit">Enter valid referrer code</small>
-            </div>
-            <div class="form-group text-center">
+          <div class="p-15 text-center mb-4">
+            <img width="60%" alt="Angular Logo" src="assets/images/Purse Diversified Logo - 01.jpg">
+          </div>
+          <h5 class="card-title text-center mt-4 mb-3 text-success lead font-weight-bold">REGISTER</h5>
+          <div class="form-group text-center">
               <h4>Register as</h4>
               <div class="row">
                 <div class="col-2" style="margin-left:33%">
                   <label for="seller">Seller</label>
-                  <input class="form-control" type="radio" name="isSeller" id="seller" [value]="0"
-                    formControlName="isSeller">
+                  <input class="form-control" type="radio" name="isSeller" id="seller" [value]="1"
+                  [(ngModel)]="isSeller">
                 </div>
                 <div class="col-2">
                   <label for="member">Member</label>
-                  <input type="radio" class="form-control" name="isSeller" id="member" [value]="1"
-                    formControlName="isSeller">
+                  <input type="radio" class="form-control" name="isSeller" id="member" [value]="0"
+                    [(ngModel)]="isSeller">
                 </div>
               </div>
             </div>
-            <div class="form-group mt-4">
+          <div *ngIf="isSeller">
+            <form class="register-form" [formGroup]="sellerFormGroup" (ngSubmit)="register(sellerFormGroup.value)"
+              novalidate>
+              <div class="form-group">
+                <label>Seller Name</label>
+                <input class="form-control" formControlName="sellerName">
+                <small class="text-danger"
+                *ngIf="sellerFormGroup.get('sellerName').dirty && sellerFormGroup.get('sellerName').invalid">
+                Enter your name</small>
+              </div>
+              <div class="form-group">
+                <label>Contact Number</label>
+                <input class="form-control" type="text" formControlName="contactNumber" max="10" placeholder="000-000-0000" mask="000-000-0000" prefix="+63-"
+                  oninput="validity.valid||(value='');">
+                  <small class="text-danger"
+                  *ngIf="sellerFormGroup.get('contactNumber').dirty && sellerFormGroup.get('contactNumber').invalid">
+                  Enter contact number</small>
+              </div>
+              <div class="form-group">
+                <label>Facebook/Website URL</label>
+                <input class="form-control" type="text" formControlName="sellerUrl">
+                <small class="text-danger"
+                *ngIf="sellerFormGroup.get('sellerUrl').dirty && sellerFormGroup.get('sellerUrl').invalid">
+                Enter Facebook/Website URL</small>
+              </div>
+              <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" placeholder="" formControlName="email">
+                <small class="text-danger"
+                  *ngIf="sellerFormGroup.controls['email'].dirty && sellerFormGroup.controls['email'].errors?.required">Enter
+                  email address</small>
+                <small class="text-danger"
+                  *ngIf="sellerFormGroup.controls['email'].dirty && sellerFormGroup.controls['email'].errors?.email">Enter
+                  a valid email address</small>
+              </div>
+              <div class="form-group" formGroupName="passwords">
+                <div>
+                  <label>Create password</label>
+                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
+                  <small class="text-danger"
+                    *ngIf="sellerFormGroup.controls['passwords'].controls.password.dirty && sellerFormGroup.controls['passwords'].controls.password.errors?.required">Enter
+                    a password</small>
+                </div>
+                <div class="pt-3">
+                  <label>Re-enter password</label>
+                  <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+                  <small class="text-danger"
+                    *ngIf="sellerFormGroup.controls['passwords'].controls.confirm_password.dirty && sellerFormGroup.controls['passwords'].errors?.invalid">Password
+                    does not match</small>
+                </div>
+                <div *ngIf="isSeller" class="form-group mt-4">
+                    <button type="submit" class="btn btn-success btn-block" [disabled]="sellerFormGroup.invalid"> Register
+                    </button>
+                  </div>
+              </div>
+            </form>
+          </div>
+          <form class="register-form" [formGroup]="registerFormGroup" (ngSubmit)="register(registerFormGroup.value)"
+            novalidate>
+            <div *ngIf="!isSeller">
+              <div class="form-group">
+                <label>Email address</label>
+                <input type="email" class="form-control" placeholder="" formControlName="email">
+                <small class="text-danger"
+                  *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.required">Enter
+                  email address</small>
+                <small class="text-danger"
+                  *ngIf="registerFormGroup.controls['email'].dirty && registerFormGroup.controls['email'].errors?.email">Enter
+                  a valid email address</small>
+              </div>
+              <div class="form-group">
+                <label>Code</label>
+                <input class="form-control" type="text" formControlName="code">
+                <small class="text-danger" *ngIf="registerFormGroup.controls['code'].errors?.isUsed">Enter a valid
+                  code</small>
+              </div>
+              <div class="form-group" formGroupName="passwords">
+                <div>
+                  <label>Create password</label>
+                  <input class="form-control" type="password" id="password" formControlName="password" maxlength="10">
+                  <small class="text-danger"
+                    *ngIf="registerFormGroup.controls['passwords'].controls.password.dirty && registerFormGroup.controls['passwords'].controls.password.errors?.required">Enter
+                    a password</small>
+                </div>
+                <div class="pt-3">
+                  <label>Re-enter password</label>
+                  <input class="form-control" type="password" formControlName="confirm_password" maxlength="10">
+                  <small class="text-danger"
+                    *ngIf="registerFormGroup.controls['passwords'].controls.confirm_password.dirty && registerFormGroup.controls['passwords'].errors?.invalid">Password
+                    does not match</small>
+                </div>
+              </div>
+              <div class="form-group">
+                <label>Upline/Referrer Code</label>
+                <input class="form-control" formControlName="referrerCode">
+                <small class="text-danger"
+                  *ngIf="registerFormGroup.controls['referrerCode'].errors?.referrerCodeLimit">Enter valid referrer
+                  code</small>
+              </div>
+            </div>
+            <div *ngIf="!isSeller" class="form-group mt-4">
               <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup.invalid"> Register
               </button>
-              <!-- <p>dasd {{registerFormGroup.controls['emailAddress'].value}}</p>
-                  <p>qweqwew {{registerFormGroup | json}}</p> -->
             </div>
-            <!-- <small class="text-muted">By clicking the 'Register' button, you confirm that you accept our <br> Terms of use and Privacy Policy.</small>                                           -->
-            <small class="form-text text-muted text-center">Already have an account? Login
+          </form>
+          <small class="form-text text-muted text-center">Already have an account? Login
               <a class="text-success font-weight-bold" routerLink="/login" routerLinkActive="active">
                 here
               </a>
             </small>
-          </form>
         </div>
       </div>
     </div>
@@ -95,20 +148,16 @@
       <div class="carousel">
         <ngu-carousel #myCarousel [inputs]="carouselConfig" [dataSource]="carouselItems | async">
           <ngu-tile *nguCarouselDef="let item; let i = index; let ani = animate">
-              <div class="card" style="width: 100%;height: 460px;">
-                <div class="m-2">
-                    <img [src]="item.imageUrl" class="card-img-top" style="height: 18em;">
-                </div>
-                  <div class="card-body">
-                    <h4>{{item.title}}</h4>
-                    <p class="card-text">{{item.description}}</p>
-                  </div>
-                </div>
+            <div class="card" style="width: 100%;height: 460px;">
+              <div class="m-2">
+                <img [src]="item.imageUrl" class="card-img-top" style="height: 18em;">
+              </div>
+              <div class="card-body">
+                <h4>{{item.title}}</h4>
+                <p class="card-text">{{item.description}}</p>
+              </div>
+            </div>
           </ngu-tile>
           <button NguCarouselNext class="rightRs">></button>
-          <button NguCarouselPrev class="leftRs"><</button>
-        </ngu-carousel>
-      </div>
-    </div>
-  </div>
-</div>
+          <button NguCarouselPrev class="leftRs">
+            <</button> </ngu-carousel> </div> </div> </div> </div>
