--- a/src/app/views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard.component.html
@@ -4,7 +4,7 @@
       <div class="card text-white bg-info">
         <div class="card-body pb-0">
           <div class="text-value">{{userCounter.profit | currency:'PHP':'symbol-narrow':'0.2-2'}}</div>
-          <div>Company Gross Profit</div>
+          <div>Company Total Acquisition</div>
           <div></div>
         </div>
       </div>
