fix(DashboardComponent) issue on user information

--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -35,7 +35,8 @@
                             </div>
                         </td>
                         <td>{{rowData.level}}</td>
-                        <td>{{rowData.isActive}}</td>
+                        <!-- <td>{{rowData.isActive}}</td> -->
+                        <td><span [ngClass]="(rowData.isActive) ? 'badge badge-success':'badge badge-warning'">{{rowData.isActive ? 'ACTIVE' : 'INACTIVE'}}</span></td>
                         <td>{{rowData.cycle}}</td>
                     </tr>
                 </ng-template>
