--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -25,7 +25,7 @@
           <div *ngIf="isSeller">
             <form class="register-form" [formGroup]="sellerFormGroup" (ngSubmit)="registerSeller(sellerFormGroup.value)"
               novalidate>
-              <div class="form-group">
+              <!-- <div class="form-group">
                 <label>Seller Name</label>
                 <input class="form-control" formControlName="sellerName">
                 <small class="text-danger"
@@ -46,7 +46,7 @@
                 <small class="text-danger"
                 *ngIf="sellerFormGroup.get('sellerUrl').dirty && sellerFormGroup.get('sellerUrl').invalid">
                 Enter Facebook/Website URL</small>
-              </div>
+              </div> -->
               <div class="form-group">
                 <label>Email address</label>
                 <input type="email" class="form-control" placeholder="" formControlName="email">
@@ -73,7 +73,7 @@
                     does not match</small>
                 </div>
                 <div *ngIf="isSeller" class="form-group mt-4">
-                    <button type="submit" class="btn btn-success btn-block" [disabled]="sellerFormGroup.invalid"> Register
+                    <button type="submit" class="btn btn-success btn-block" [disabled]="sellerFormGroup.invalid || registerLoading"> Register
                     </button>
                   </div>
               </div>
@@ -123,7 +123,7 @@
               </div>
             </div>
             <div *ngIf="!isSeller" class="form-group mt-4">
-              <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup.invalid"> Register
+              <button type="submit" class="btn btn-success btn-block" [disabled]="registerFormGroup.invalid  || registerLoading"> Register
               </button>
             </div>
           </form>
