--- a/src/app/views/register/register.component.html
+++ b/src/app/views/register/register.component.html
@@ -120,9 +120,9 @@
               </div>
               <div class="form-group">
                 <label>Upline/Referrer Code</label>
-                <input class="form-control" formControlName="referrerCode">
+                <input class="form-control" formControlName="referrerCode" (focusout)="validateUplineCode(registerFormGroup.controls['referrerCode'].value)">
                 <small class="text-danger"
-                  *ngIf="registerFormGroup.controls['referrerCode'].errors?.referrerCodeLimit">Enter valid referrer
+                  *ngIf="isInvalidUplineCode">Enter valid referrer
                   code</small>
               </div>
             </div>
