--- a/src/app/views/new-page/new-page.component.html
+++ b/src/app/views/new-page/new-page.component.html
@@ -17,7 +17,7 @@
                     <label>Description</label>
                     <input type="text" class="form-control" formControlName="description">
                 </div>
-                <button class="btn btn-success" type="submit">Save</button>
+                <button class="btn btn-success" type="submit" [disabled]="contentForm.invalid">Save</button>
             </form>
         </div>
     </div>
