refactor(AdminDashboard) migrate member service to spring boot backend

--- a/src/app/views/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/views/admin-dashboard/admin-dashboard.component.html
@@ -158,8 +158,8 @@
               </ng-template>
               <ng-template pTemplate="body" let-rowData>
                 <tr>
-                  <td>{{rowData.memberName}}</td>
-                  <td>{{rowData.role | uppercase}}</td>
+                  <td>{{rowData.email}}</td>
+                  <td>{{rowData.accountType | uppercase}}</td>
                 </tr>
               </ng-template>
           </p-table>
